# fast-api-example

./: .gitignore  Dockerfile  dependencies.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
tests/: test_all_app.py
