[tool.poetry]
name = "fast-api-example"
version = "0.1.0"
description = ""
authors = ["Thiago Lima <e10.thiago@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
